# spectra

./: .easignore  .gitignore  LICENSE  README.md  README.txt  eyesight.py  feed.py  pyproject.toml  speech.py  testbed.py
api/: ai.py  app.py  llm.py  testbed.py  vertex.py
app/SpectraApp/: App.js  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json
app/SpectraApp/android/: settings.gradle
app/SpectraApp/android/app/: build.gradle
app/SpectraApp/android/app/src/debug/java/com/jackhao/spectra/: ReactNativeFlipper.java
app/SpectraApp/android/app/src/main/: AndroidManifest.xml
app/SpectraApp/android/app/src/main/java/com/jackhao/spectra/: MainActivity.java  MainApplication.java
app/SpectraApp/android/app/src/main/res/values/: strings.xml
app/SpectraApp/android/app/src/release/java/com/jackhao/spectra/: ReactNativeFlipper.java
app/SpectraApp/screens/: .Video.js.swp  Settings.js  Video.js  Video2.js  Welcome.js
app/SpectraApp/screens/components/: Background.js  Button.js  Logo.js  TextInput.js
app/SpectraApp/src/: App.js
app/SpectraApp/src/components/: Background.js  FloatingActionButton.js  Header.js  Logo.js  Paragraph.js  TextInput.js
app/SpectraApp/src/core/: theme.js
app/SpectraApp/src/views/: Settings.js  Video.js  Video2.js  Welcome.js
backend/data/: walk_roll_map_2023-11-18.csv
backend/notebooks/: cv.ipynb
backend/scripts/: export_owlv2.py  export_yolov8n.py
spectra/: eyesight.py  testbed.py
src/: feed.py  speech.py
